# epednn_mit

./: README.md  pyproject.toml
src/epednn_mit/: __init__.py
src/epednn_mit/interfaces/: torax_interface.py
src/epednn_mit/interfaces/tests/: torax_interface_test.py
src/epednn_mit/models/sparc/: README.txt  epednn_mit_sparc_0.keras  epednn_mit_sparc_0.pkl  epednn_mit_sparc_1.keras  epednn_mit_sparc_1.pkl  epednn_mit_sparc_2.keras  epednn_mit_sparc_2.pkl  epednn_mit_sparc_3.keras  epednn_mit_sparc_3.pkl  epednn_mit_sparc_4.keras  epednn_mit_sparc_4.pkl  epednn_mit_sparc_5.keras  epednn_mit_sparc_5.pkl  epednn_mit_sparc_6.keras  epednn_mit_sparc_6.pkl  epednn_mit_sparc_7.keras  epednn_mit_sparc_7.pkl  epednn_mit_sparc_8.keras  epednn_mit_sparc_8.pkl  epednn_mit_sparc_9.keras  epednn_mit_sparc_9.pkl  jax_model.py  pytorch_model.py  tensorflow_model.py  test_script.py
src/epednn_mit/scripts/: test.py
src/epednn_mit/utils/: load.py
