[build-system]
requires = ["setuptools>=62.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "epednn_mit"
description = "EPED network networks trained by MIT"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {file = "LICENSE"}
authors = [
  { name = "Aaron Ho", email = "aaronkho@mit.edu" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version"]

dependencies = [
  "pip",
  "numpy",
  "tensorflow>=2.18.1",
]

[project.urls]
"Homepage" = "https://github.com/aaronkho/low-cost-bnn"

[tool.setuptools.dynamic]
version = {attr = "epednn_mit.__version__"}
