[build-system]
requires = ["setuptools>=80.0", "wheel", "setuptools-scm[simple]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "epednn_mit"
description = "EPED network networks trained by MIT"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {file = "LICENSE"}
authors = [
  { name = "Aaron Ho", email = "aaronkho@mit.edu" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version"]

dependencies = [
  "pip",
  "numpy",
]

[project.optional-dependencies]
tensorflow = ["tensorflow>=2.18.1"]
jax = ["flax"]

[project.urls]
"Homepage" = "https://github.com/aaronkho/epednn_mit"

[project.scripts]
test_epednn_mit = "epednn_mit.scripts.test:main"
